# KTH-Neuro-Computing-Systems

./: .gitignore  ControlMX28.py  README.md  Servo_Control.py  Setup.py  main.py
DY/devel/: _setup_util.py
DY/devel/include/dynamixel_sdk_examples/: GetPosition.h  SetPosition.h
DY/devel/lib/dynamixel_sdk/: group_sync_write.py  protocol1_packet_handler.py
DY/devel/lib/dynamixel_sdk_examples/: read_write_node
DY/devel/lib/pkgconfig/: dynamixel_sdk.pc
DY/devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
DY/src/dynamixel_sdk_examples/msg/: SetPosition.msg
DY/src/dynamixel_sdk_examples/srv/: GetPosition.srv
Multi_Motor/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Multi_Motor/devel/include/dynamixel_sdk_examples/: SetPosition.h
Multi_Motor/devel/include/multi_motor/: Control.h  GetPosition.h  GetPositionRequest.h  GetPositionResponse.h
Multi_Motor/devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  packet_handler.py  port_handler.py  protocol1_packet_handler.py  robotis_def.py
Multi_Motor/devel/lib/dynamixel_sdk_examples/: multi_motor
Multi_Motor/devel/lib/multi_motor/: multi_motor
Multi_Motor/devel/lib/pkgconfig/: dynamixel_sdk.pc  dynamixel_sdk_examples.pc  multi_motor.pc
Multi_Motor/devel/share/roseus/ros/multi_motor/: manifest.l
Multi_Motor/src/dynamixel_sdk_examples/: CMakeLists.txt
Multi_Motor/src/dynamixel_sdk_examples/msg/: SetLed.msg  SetPosition.msg
Multi_Motor/src/dynamixel_sdk_examples/src/: multi.py  multi_motor.cpp  run.py
Multi_Motor/src/multi_motor/: CHANGELOG.rst  CMakeLists.txt
Multi_Motor/src/multi_motor/msg/: Control.msg
Multi_Motor/src/multi_motor/src/: multi_motor.cpp  multi_motor_radians.cpp  run.py
Multi_Motor/src/multi_motor/srv/: GetPosition.srv
Single_Motor/: run.sh
Single_Motor/devel/: .catkin  .rosinstall  local_setup.sh
Single_Motor/devel/include/dynamixel_sdk_examples/: GetPositionResponse.h
Single_Motor/devel/include/single_motor/: Control.h  GetPosition.h  GetPositionRequest.h  GetPositionResponse.h
Single_Motor/devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  group_sync_write.py  packet_handler.py  port_handler.py  protocol2_packet_handler.py  robotis_def.py
Single_Motor/devel/lib/pkgconfig/: dynamixel_sdk.pc  dynamixel_sdk_examples.pc  single_motor.pc
Single_Motor/devel/lib/single_motor/: run_single_motor_using_rostopics
Single_Motor/src/dynamixel_sdk_examples/src/: read_write_node.cpp
Single_Motor/src/single_motor/: CHANGELOG.rst  CMakeLists.txt  package.xml
Single_Motor/src/single_motor/src/: run_single_motor_using_rostopics.cpp
motorControlPython/: Add.py  ControlMX28.py  README.md  Servo_Control.py  main.py
(+62 files in other folders)
